masterfilesdir = $(projdatadir)/CoreBase
dist_masterfiles_DATA = $(srcdir)/failsafe/failsafe.cf $(srcdir)/libraries/cfengine_stdlib.cf $(srcdir)/promises.cf $(srcdir)/def.cf $(srcdir)/controls/cf_execd.cf $(srcdir)/controls/cf_report.cf $(srcdir)/controls/cf_agent.cf $(srcdir)/controls/cf_runagent.cf $(srcdir)/controls/cf_monitord.cf $(srcdir)/services/init_msg.cf

#
# Some basic clean ups
#
MOSTLYCLEANFILES = *~

#
# Get everything removed down to where rebuilding requires:
# "make; make install"
# 
CLEANFILES =

#
# Get everything removed down to where rebuilding requires:
# "configure; make; make install"
#
DISTCLEANFILES = 

#
# Get everything removed down to where rebuilding requires:
# "aclocal; autoconf; autoheader; automake --add-missing"
# "configure; make; make install"
#
MAINTAINERCLEANFILES = Makefile.in
